<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_20"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.utils.ListEmployeeByDepartmentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liet_ke_nhan_vien_theo_phong_ban"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_20"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_select_department_list_employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/dp_10"
            android:text="@string/chon_phong_ban"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spinner_select_department_list_employee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_toEndOf="@id/text_view_select_department_list_employee"
            android:background="@color/blue"
            android:text="@string/chon_ngay" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listView_employee_department"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_380"
        android:layout_marginTop="@dimen/dp_10" />

    <Button
        android:id="@+id/button_back_list_employee_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/blue"
        android:text="@string/ve_trang_chu" />

</LinearLayout>