<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_40"
    android:layout_marginTop="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_40"
    android:layout_marginBottom="@dimen/dp_20"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.department.EditDepartmentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sua_thong_tin_phong_ban"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_50">

        <EditText
            android:id="@+id/edit_text_search_department_edit_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/button_search_department_edit_department"
            android:autofillHints="name"
            android:hint="@string/nhap_id"
            android:inputType="text" />

        <Button
            android:id="@+id/button_search_department_edit_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@color/blue"
            android:text="@string/tim_kiem"
            android:textColor="@color/white" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edit_text_id_edit_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_name_edit_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:autofillHints="name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_description_edit_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:autofillHints="name"
        android:inputType="text" />

    <Button
        android:id="@+id/button_do_edit_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/blue"
        android:text="@string/sua" />

    <Button
        android:id="@+id/button_back_edit_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/blue"
        android:text="@string/ve_trang_chu" />

</LinearLayout>
